# archivekong

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: hosted-relay.md
public/: manifest.webmanifest  sw.js
relay-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
relay-service/src/: devices.rs  limits.rs  main.rs  protocol.rs  proxy.rs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dlna.rs  lan_server.rs  lib.rs  relay_client.rs
video-library-tauri/src-tauri/icons/: icon.icns
