[package]
name = "video-library-tauri"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_library_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mp4ameta = "0.13.0"
lofty = "0.24.0"
zip = "0.6.6"
tauri-plugin-updater = "2"
trash = "5.2.6"
mime_guess = "2"
percent-encoding = "2"
rust-embed = "8"
socket2 = "0.5"
tiny_http = "0.12"
argon2 = "0.5"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
ureq = { version = "2.12", features = ["json"] }
